# alphazero-rs

./: Cargo.toml
examples/: connect_four.rs
examples/connect_four/: connect_four_game.rs
examples/connect_four_lib/: connect_four_game.rs  connect_four_net.py  mod.rs
examples/utils/: mod.rs  python_nnet.rs
src/: arena.rs  async_mcts.rs  coach.rs  game.rs  lib.rs  nnet.rs  node.rs
src/node/tests/: dummy_game.rs
