[package]
name = "alphazero_rs"
version = "0.1.0"
authors = ["Srinivas Kaza <srinivas@kaza.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alphazero_rs"

[dependencies]
ndarray = { version = "0.13", features = ["serde", "blas"] }
tch = "0.1.7"
rayon = "1.3.1"
crossbeam = "0.7.3"
ccl = "4.12.1"
array-init = "0.1.1"
log = "0.4.11"
rand = { version = "0.7.3", features = ["small_rng"] }
counter = "0.5.2"
permutohedron = "0.2.4"
pbr = "1.0.3"
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"